# pyotels

./: .gitignore  README.md  main.py  pyproject.toml
.agent/rules/: rules.md
docs/: api_reference.md  configuration.md  index.md  installation.md  usage.md
src/: config.py  database.py  exporter.py  extractor.py  items.py  logger.py  models.py  pipelines.py  scraper.py  settings.py  spiders.py
src/models/: __init__.py  dataclasses.py  db_models.py
src/pyotels/: __init__.py  cli.py  config.py  data_processor.py  exceptions.py  extractor.py  logger.py  models.py  scraper.py  settings.py  settings_loader.py  site_analyzer.py
src/pyotels/config/: config.py
src/pyotels/core/: data_processor.py  extractor.py  models.py
src/pyotels/core/enums/: __init__.py
src/pyotels/exceptions/: __init__.py  authentical_error.py  base_error.py  data_error.py  network_error.py  parsing_error.py  playwright_error.py
src/pyotels/services/: controller_service.py  data_service.py
src/pyotels/tools/: repair.py  site_analyzer.py
src/pyotels/utils/: cache.py  dev.py  logger.py  normalizations.py  playwright.py
tests/: test_scraper.py
