[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyotels"
version = "0.1.0"
description = "Librería para scraping de OtelMS"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "tortoise-orm>=0.21.4",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "aiocache>=0.12.2",
]

[tool.setuptools.packages.find]
where = ["src"]
