[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyotels"
version = "0.5.0"
description = "Librería para scraping de OtelMS"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "diskcache>=5.6.3",
    "playwright>=1.57.0",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
]

[project.scripts]
pyotels = "pyotels.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
